--- a/packages/client/src/assets/scss/components/_forms.scss
+++ b/packages/client/src/assets/scss/components/_forms.scss
@@ -1,6 +1,6 @@
 .apply-form {
   p {
-    margin-top: 4px !important;
+    margin: 4px 0 0 !important;
     font-size: 14px !important;
   }
 }
